Added example shapes

--- a/glDemo/glDemo.vcxproj.filters
+++ b/glDemo/glDemo.vcxproj.filters
@@ -33,12 +33,42 @@
     <ClInclude Include="FreeImage\FreeImagePlus.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="semi-circle-immediate-mode.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="semi-circle-vertexarray.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="texture-quad-immediate.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="texture-quad-vertexarray.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="texture-quad-interleaved.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="core.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="semi-circle-immediate-mode.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="semi-circle-vertexarray.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="texture-quad-immediate.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="texture-quad-vertexarray.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="texture-quad-interleaved.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
