--- a/glDemo/glDemo.vcxproj
+++ b/glDemo/glDemo.vcxproj
@@ -137,10 +137,20 @@
     <ClInclude Include="GLFW\glfw3.h" />
     <ClInclude Include="GLFW\glfw3native.h" />
     <ClInclude Include="GL\glew.h" />
+    <ClInclude Include="semi-circle-immediate-mode.h" />
+    <ClInclude Include="semi-circle-vertexarray.h" />
+    <ClInclude Include="texture-quad-immediate.h" />
+    <ClInclude Include="texture-quad-interleaved.h" />
+    <ClInclude Include="texture-quad-vertexarray.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="core.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="semi-circle-immediate-mode.cpp" />
+    <ClCompile Include="semi-circle-vertexarray.cpp" />
+    <ClCompile Include="texture-quad-immediate.cpp" />
+    <ClCompile Include="texture-quad-interleaved.cpp" />
+    <ClCompile Include="texture-quad-vertexarray.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
