--- a/glDemo/glDemo.vcxproj.filters
+++ b/glDemo/glDemo.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="texture-quad-interleaved.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="arwing.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -69,6 +72,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="texture-quad-interleaved.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="arwing.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
