--- a/glDemo/glDemo.vcxproj
+++ b/glDemo/glDemo.vcxproj
@@ -140,6 +140,7 @@
     <ClInclude Include="GL\glew.h" />
     <ClInclude Include="semi-circle-immediate-mode.h" />
     <ClInclude Include="semi-circle-vertexarray.h" />
+    <ClInclude Include="star-vbo.h" />
     <ClInclude Include="texture-quad-immediate.h" />
     <ClInclude Include="texture-quad-interleaved.h" />
     <ClInclude Include="texture-quad-vertexarray.h" />
@@ -150,6 +151,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="semi-circle-immediate-mode.cpp" />
     <ClCompile Include="semi-circle-vertexarray.cpp" />
+    <ClCompile Include="star-vbo.cpp" />
     <ClCompile Include="texture-quad-immediate.cpp" />
     <ClCompile Include="texture-quad-interleaved.cpp" />
     <ClCompile Include="texture-quad-vertexarray.cpp" />
