--- a/glDemo/glDemo.vcxproj.filters
+++ b/glDemo/glDemo.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="arwing.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="star-vbo.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -75,6 +78,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="arwing.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="star-vbo.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
