Basic functionality in place

--- a/glDemo/glDemo.vcxproj
+++ b/glDemo/glDemo.vcxproj
@@ -138,23 +138,29 @@
     <ClInclude Include="GLFW\glfw3.h" />
     <ClInclude Include="GLFW\glfw3native.h" />
     <ClInclude Include="GL\glew.h" />
+    <ClInclude Include="GUFont.h" />
+    <ClInclude Include="PrincipleAxes.h" />
     <ClInclude Include="semi-circle-immediate-mode.h" />
     <ClInclude Include="semi-circle-vertexarray.h" />
     <ClInclude Include="star-vbo.h" />
     <ClInclude Include="texture-quad-immediate.h" />
     <ClInclude Include="texture-quad-interleaved.h" />
     <ClInclude Include="texture-quad-vertexarray.h" />
+    <ClInclude Include="VectorTank.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="arwing.cpp" />
     <ClCompile Include="core.cpp" />
+    <ClCompile Include="GUFont.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="PrincipleAxes.cpp" />
     <ClCompile Include="semi-circle-immediate-mode.cpp" />
     <ClCompile Include="semi-circle-vertexarray.cpp" />
     <ClCompile Include="star-vbo.cpp" />
     <ClCompile Include="texture-quad-immediate.cpp" />
     <ClCompile Include="texture-quad-interleaved.cpp" />
     <ClCompile Include="texture-quad-vertexarray.cpp" />
+    <ClCompile Include="VectorTank.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
