Added game clock for consistent movement

--- a/glDemo/glDemo.vcxproj
+++ b/glDemo/glDemo.vcxproj
@@ -137,12 +137,14 @@
     <ClInclude Include="GLFW\glfw3.h" />
     <ClInclude Include="GLFW\glfw3native.h" />
     <ClInclude Include="GL\glew.h" />
+    <ClInclude Include="GUClock.h" />
     <ClInclude Include="GUFont.h" />
     <ClInclude Include="PrincipleAxes.h" />
     <ClInclude Include="VectorTank.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="core.cpp" />
+    <ClCompile Include="GUClock.cpp" />
     <ClCompile Include="GUFont.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="PrincipleAxes.cpp" />
