--- a/glDemo/glDemo.vcxproj.filters
+++ b/glDemo/glDemo.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="GUFont.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GUClock.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -57,6 +60,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="GUFont.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GUClock.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
